--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Portfolio.css">
+    <link rel="stylesheet" href="Portfoio.css">
     <title>Heet Portfolio</title>
 </head>
 
@@ -60,7 +60,7 @@
             soluta beatae, dolor ad perferendis aut sed ea nemo maxime eveniet inventore. Delectus, voluptatem saepe!
         </div>
         <!-- <div class="aboutus-btn">
-            <button class="Resume-btn"><a href="./images/HEET Resume.pdf" id="resume-pdf">Resume</a></button>
+            <button class="Resume-btn"><a href="" id="resume-pdf">Resume</a></button>
         </div> -->
     </section>
     <!-- Education  -->
